fix z-index header

--- a/src/global.css
+++ b/src/global.css
@@ -41,6 +41,7 @@ body{
 	width: 100%;
 	height: 65px;
 	position: fixed;
+	z-index: 99;
 }
 .header .header__logo {
 	height: 40px;
@@ -48,7 +49,7 @@ body{
 	margin-top: calc((65px - 40px)/2);
 	fill: var(--grayLightColor);
 	position: relative;
-	z-index: 1;
+	z-index: 99;
 }
 .hashtag{
 	font-family: var(--Headlines);
